--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GigSelector</title>
+    <title>Sydney Gig Locater</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+    <nav>
+      <%= link_to 'Home', root_path %>
+      <% if @current_user.present? %>
+        <%= link_to "Create Event", new_gig_path %>
+        <%= link_to 'All Events', gigs_path %>
+        <%= link_to "Logout #{ @current_user.email }", login_path, :method => 'delete' %>
+      <% else %>
+        <%= link_to 'Sign up', new_user_path %>
+        <%= link_to 'Sign in', login_path %>
+      <% end %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
