--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -1,20 +1,25 @@
-<h1> <%= @gig.name %></h1>
+<div class = "gigshowcontainer">
+<h1> <%= @gig.name %></h1> 
 
 <%= image_tag @gig.image %>
 
-<ul>
-<li>Name: <%= @gig.name %></li>
-<% if @gig.artist.present? %>
-    <li>Artist: <%= link_to @gig.artist.name, @gig.artist %></li>
-<% end%>
+<ul class = "gigsshowgrid">
+<li><% @gig.artists.each do |artist| %> 
+        <%= link_to artist.name, artist  %>
+        <%= image_tag artist.image, :class => 'artistimage'  %>
+        <% end%> 
 <li>Location: <%= @gig.location %></li>
+<li>Promoter: <%= link_to @gig.user.name, @gig.user %> <%= image_tag @gig.user.image, :class => "promoterlogoshow" %>  </li>
 <li>Genre: <%= @gig.genre %></li>
-<li>Rating: <%= @gig.rating %></li>
-
-
 </ul>
 
+
 <div class="controls">
+<% if @current_user.email == @gig.user.email || @current_user.admin? %>
     <%= link_to 'Edit gig', edit_gig_path(@gig) %>
     <%= link_to 'Delete gig', @gig, :method => 'delete', :data => { :confirm => 'Are you sure?'} %>
+</div>
+<% end%>
+
+
 </div>
