--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,8 @@
 <p>Welcome back user <%= @current_user.email if @current_user.present? %></p>
+
+WELCOME TO THE HOME OF SYDNEY TECHNO / HOUSE MUSIC Events
+
+Sign up
+
+Already a user, sign in!
+
