--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,20 +1,159 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+
+
 .gigs-index {
-    background-color:  rgb(219, 233, 239);
+    background-color:  rgb(0, 0, 0);
+    opacity: 0.8;
     /* border: 3px solid rgb(219, 233, 239); */
     height: 250px;
     margin: 20px 0;
     padding: 10px 30px 0 30px;
     border-radius: 20px;
-    box-shadow: 10px 10px 10px rgb(236, 236, 236);
+    box-shadow: 10px 10px 10px rgb(255, 0, 208);
 }
 
 body{
     background-color: rgb(255, 235, 58);
+    font-family: 'Nova Square', cursive;
+    color: white;
+
+    
 }
 
+a {
+    color: hotpink;
+  }
+
 .container{
-    display:flex;
-    margin: 0 auto;
+    margin: auto;
+    width: 65%;
+}
 
+.feature {
+    height: 90%;
+}
 
+.gignameindex {
+    margin: 0; 
+    text-align: center;
+}
+
+.giginfoindex{
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr 1fr;
+}
+
+.gigsdateindex{
+    margin: 0;
+    font-size: medium;
+}
+
+.artistimage{
+    width: 15%;
+}
+
+.lineuptext{
+    margin-bottom: 15px ;
+    text-align: center;
+    font-size: 10px;
+}
+
+.artistname{
+
+    font-size: 200%;
+    display: block;
+}
+
+.imagecontainer{
+    position:relative;
+    height: 20%;
+    margin-right: 60%;
+    margin-right: 40px;
+}
+
+.imagetext {
+    position: relative;
+    bottom: 20%;
+    text-align: center;
+    background-color: black;
+    opacity: 0.6;
+    color: white;
+    z-index: 1;
+  }
+
+  .gigshowcontainer{
+    margin: auto;
+    width: 65%;
+  }
+
+  .promoterlogoshow{
+    width: 10%;
+  }
+
+  .gigsshowgrid{
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr 1fr;
+  }
+
+.ticketlogo{
+    height: 10%;
+}
+
+.body{
+    text-align: center;
+  }
+ 
+
+  .button-32 {
+    background-color: #fff000;
+    border-radius: 12px;
+    color: #000;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-align: center;
+    transition: 200ms;
+    width: 60%;
+    height: 10%;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    font-family: 'Nova Square', cursive;
+  }
+  
+  .button-32:not(:disabled):hover,
+  .button-32:not(:disabled):focus {
+    outline: 0;
+    background: #f4e603;
+    box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
+  }
+  
+  .button-32:disabled {
+    filter: saturate(0.2) opacity(0.5);
+    -webkit-filter: saturate(0.2) opacity(0.5);
+    cursor: not-allowed;
+  }
+  
+.rightnav{
+    float: right;
+}
+
+.logoutbutton{
+    float:right;
+} 
+
+.artistcontainerindex{
+  color: aquamarine;
+  display: inline
+  /* display: grid;
+  grid-template-columns: auto auto auto auto;
+  width: 10%; */
+} 
+
+.usernav{
+  float:right
 }
