added admin access , profile page and read only functionality

--- a/app/views/gigs/index.html.erb
+++ b/app/views/gigs/index.html.erb
@@ -16,7 +16,7 @@
         <%= link_to artist.name, artist %>
         <% end %> 
         </li> </div>
-        <button class="button-32" role="button">Tix!</button>
+        <button class="button-32" role="button">Tickets!</button>
         </div>
     </ul>  
 <% end%>
