--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,11 +10,16 @@
     margin: 20px 0;
     padding: 10px 30px 0 30px;
     border-radius: 20px;
-    box-shadow: 10px 10px 10px rgb(255, 0, 208);
+    box-shadow: 0 5px 15px rgba(233, 3, 233, 0.4);
+}
+
+.gigs-index:hover {
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0 10px 25px rgba(233, 3, 233, 0.4);
 }
 
 body{
-    background-color: rgb(255, 235, 58);
+    background-color: rgb(0, 0, 0);
     font-family: 'Nova Square', cursive;
     color: white;
 
@@ -61,7 +66,7 @@ a {
 
 .artistname{
 
-    font-size: 200%;
+    font-size: 150%;
     display: block;
 }
 
