--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -15,7 +15,7 @@
 
 
 <div class="controls">
-<% if @current_user.email == @gig.user.email || @current_user.admin? %>
+<% if @current_user.present? && (@current_user.email == @gig.user.email || @current_user.admin?)  %>
     <%= link_to 'Edit gig', edit_gig_path(@gig) %>
     <%= link_to 'Delete gig', @gig, :method => 'delete', :data => { :confirm => 'Are you sure?'} %>
 </div>
