--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,17 +1,19 @@
-<div class = "container">
+<div class = "artistshowcontainer">
 
-<h1>All Artists</h1>
+<h1 class="artistshowname">All Artists</h1>
 
 
 <% @artists.each do |artist|%>
-    <%= image_tag artist.image, :class => 'artistthumb' if artist.image.present? %>
-    <div class="artistcontainerindex">
-        Name: <%= link_to artist.name, artist  %>
-         Social: <%= artist.social %>
-         Work: <%= artist.work %>
-         Bio: <%= artist.bio %>``
+<div class ="bordershowartist">
+    <h3> <%= link_to artist.name, artist %> </h3> 
+    <h3><%= image_tag artist.image, :class => "left" if artist.image.present?  %>
+    <div class="righttext">  <a href=<%= artist.work %>><img class = "sociallogo" src="/assets/linktree.png" alt="linktreelogo"></a> |  
+    <a href=<%= artist.social %>> <img class = "sociallogo" src="/assets/output-onlinepngtools.png" alt="instagramlogo"></a> 
+ </div> </h3> 
     </div>
 <% end%>
 
 
 </div>
+
+
