--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Oswald:wght@200;600&display=swap');
+
 
 
 .gigs-index {
@@ -20,7 +22,8 @@
 
 body{
     background-color: rgb(0, 0, 0);
-    font-family: 'Nova Square', cursive;
+    
+    font-family: 'Oswald', sans-serif;
     color: white;
 
     
@@ -28,6 +31,7 @@ body{
 
 a {
     color: rgb(255, 255, 255);
+    text-decoration: none;
   }
 
 .container{
@@ -41,7 +45,8 @@ a {
 
 .gignameindex {
     margin: 0; 
-    text-align: center;
+    text-align: left;
+    text-transform: uppercase;
 }
 
 .giginfoindex{
@@ -91,6 +96,13 @@ a {
     margin: auto;
     width: 65%;
   }
+
+.giglineupindex{
+  position:relative;
+    margin-right: 60%;
+    margin-right: 40px;
+    margin-bottom: 80%;
+}
 
   .promoterlogoshow{
     width: 10%;
@@ -258,4 +270,8 @@ text-align: center;
   font-size: 20px;
   text-align: center;
   border: solid white 1px;
+}
+
+.gigindexgenre{
+  font-size: medium;
 }
