--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,18 @@
-<p>Welcome back user <%= @current_user.email if @current_user.present? %></p>
+<div class = "homecontainer">
 
-WELCOME TO THE HOME OF SYDNEY TECHNO / HOUSE MUSIC Events
+<%= image_tag("backgroundimagenew.png", :class => "backgroundimage", :alt => "picture of a moon" )%>
 
-Sign up
 
-Already a user, sign in!
+  <div class="top-left"><h1>Gig Locatr</h1> 
+  
+  <h4 class = "descriptivetext">Home of Eora/Sydney's finest underground acts </h4>
+   
+  
+<div class="btn-group">
+<button><%= link_to 'All Events', gigs_path %></button>
+  <button><%= link_to 'Sign In', login_path %></button>
+  <button><%= link_to 'Sign Up', new_user_path %></button>
+</div>
+
+</div>
 
