added read me file

--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,3 +1,4 @@
+<%#Currently this for is invalid as only admin can create new artists. A new model Artist will be worked on soon%>
 <%= form_for @artist do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
