--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,17 +2,16 @@
 
 <h1 class="artistshowname">All Artists</h1>
 
-
 <% @artists.each do |artist|%>
 <div class ="bordershowartist">
     <h3> <%= link_to artist.name, artist %> </h3> 
     <h3><%= image_tag artist.image, :class => "left" if artist.image.present?  %>
+    <%#ALL SOCIAL LINKS%>
     <div class="righttext">  <a href=<%= artist.work %>><%= image_tag("linktree.png", :class => "sociallogo", :alt => "linktreelogo" )%></a> |  
     <a href=<%= artist.social %>> <%= image_tag("insta_logo.png", :class => "sociallogo", :alt => "linktreelogo" )%></a> 
- </div> </h3> 
-    </div>
-<% end%>
-
+    </div> </h3> 
+</div> <%#.bordershowartist%>
+<% end%> <%#End of line 8 loop%>
 
 </div>
 
