--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,14 +1,11 @@
 <div class="artistshowcontainer">
 <h1 class="artistshowname"> <%= @artist.name %></h1>
 
-
-    
 <div class = "bordershowartist"><h3><%= image_tag @artist.image, :class => "left" if @artist.image.present?  %>
-   
-  <div class="righttext">  <a href=<%= @artist.work %>><%= image_tag("linktree.png", :class => "sociallogo", :alt => "linktreelogo" )%></a> |  
+    <%#ALL SOCIALS%>
+    <div class="righttext">  <a href=<%= @artist.work %>><%= image_tag("linktree.png", :class => "sociallogo", :alt => "linktreelogo" )%></a> |  
     <a href=<%= @artist.social %>> <%= image_tag("insta_logo.png", :class => "sociallogo", :alt => "linktreelogo" )%></a> </h3> </div>
-   <h3> <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/646818657&color=%23846c54&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dameeeela" title="dameeeela" target="_blank" style="color: #cccccc; text-decoration: none;">dameeeela</a> · <a href="https://soundcloud.com/dameeeela/sets/live-mixes-by-dameeeela" title="LIVE MIXES BY DAMEEEELA" target="_blank" style="color: #cccccc; text-decoration: none;">LIVE MIXES BY DAMEEEELA</a></div></h3> </div>
+    <h3> <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/646818657&color=%23846c54&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dameeeela" title="dameeeela" target="_blank" style="color: #cccccc; text-decoration: none;">dameeeela</a> · <a href="https://soundcloud.com/dameeeela/sets/live-mixes-by-dameeeela" title="LIVE MIXES BY DAMEEEELA" target="_blank" style="color: #cccccc; text-decoration: none;">LIVE MIXES BY DAMEEEELA</a></div></h3> 
+</div><%#.bordershowartist%>
     
-
-
 </div>
