--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-
     <nav>
       <%= link_to 'Home', root_path %>
       |
@@ -17,24 +15,21 @@
       |
       <%= link_to 'All Artists', artists_path %>
       |
-
-
       <%= link_to 'All Promoters', users_path %>
 
-  
-
+      <%# Following Nav links only available for logged in users, will not show up for casual users %>
 
       <% if @current_user.present? %>
-       <div class ="usernav"> <%= link_to "Create Event", new_gig_path %> |
+      <div class ="usernav"> 
+        <%= link_to "Create Event", new_gig_path %> |
         <%= link_to "My Profile", user_path(@current_user.id) %> | 
         <%= link_to "Logout #{ @current_user.email }", login_path, :method => 'delete' %>
-       </div>
+      </div>
       <% else %>
-       <div class = "rightnav"><%= link_to 'Sign up', new_user_path %> |
+      <div class = "rightnav"><%= link_to 'Sign up', new_user_path %> |
         <%= link_to 'Sign in', login_path %></div> 
       <% end %>
     </nav>
-
     <%= yield %>
   </body>
 </html>
