--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,16 +2,13 @@
 
 <%= image_tag("backgroundimagenew.png", :class => "backgroundimage", :alt => "picture of a moon" )%>
 
-
-  <div class="top-left"><h1>Gig Locatr</h1> 
-  
-  <h4 class = "descriptivetext">Home of Eora/Sydney's finest underground acts </h4>
-   
-  
-<div class="btn-group">
-<button><%= link_to 'All Events', gigs_path %></button>
-  <button><%= link_to 'Sign In', login_path %></button>
-  <button><%= link_to 'Sign Up', new_user_path %></button>
+<div class="top-left">
+    <h1>Gig Locatr</h1> 
+    <h4 class = "descriptivetext">Home of Eora/Sydney's finest underground acts </h4>
+    <div class="btn-group"> <%#Home Page buttons%>
+    <button><%= link_to 'All Events', gigs_path %></button>
+    <button><%= link_to 'Sign In', login_path %></button>
+    <button><%= link_to 'Sign Up', new_user_path %></button>
 </div>
 
 </div>
